--- a/php-apache-mysql/docker-compose.yml
+++ b/php-apache-mysql/docker-compose.yml
@@ -15,3 +15,13 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=teste
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:5.0.2
+    volumes:
+      - /sessions
+    ports:
+      - 8080:80
+    links:
+      - db
+    environment:
+      - PMA_ARBITRARY=1
