--- a/php-apache-mysql/docker-compose.yml
+++ b/php-apache-mysql/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   php:
     # image: php:7.2-apache # Uma imagem do php com apache
-    build:
+    build: # Build constrói a partir de um Dockerfile
       context: . # Informa onde está o Dockerfile a ser executado
       dockerfile: Dockerfile
     container_name: mrbrunelli-php
