--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 networks:
     banco:
     web:
+    fila:
 
 services:
     db:
@@ -47,5 +48,25 @@ services:
         networks:
             - banco
             - web
+            - fila
         depends_on:
             - db
+            - queue
+        environment:
+            - DB_NAME=email_sender
+    queue:
+        image: redis:3.2
+        networks:
+            - fila
+
+    worker:
+        build: worker
+        volumes:
+            # Worker
+            - ./worker:/worker
+        working_dir: /worker
+        command: worker.py
+        networks:
+            - fila
+        depends_on:
+            - queue
